@@ -60,7 +60,7 @@
                                         <li><a href="#How">How</a></li>
                                     </ul>
                                 </li>
-                                <li class="list-break"><span class="gray-700 inter">•&emsp;•&emsp;•&emsp;•&emsp;•</span></li>
+                                <li class="list-break"><span class="gray-700 inter">•&emsp;•&emsp;•</span></li>
                                 <li><a href="#WouldThatOurLivesNotBeSeparate">Would That Our Lives Not Be Separate</a></li>
                                 <li><a href="#IHateToGoToBedAtNight">I Hate to Go to Bed at Night</a></li>
                                 <li><a href="#YouDidntBreakMyHeart">You didn’t break my heart</a></li>
@@ -87,7 +87,7 @@
                                 <li><a href="#SheWantsAndIsNotAfraidToWant">She wants, and is not afraid to want</a></li>
                                 <li><a href="#TogetherWeWereAir">Together, we were air</a></li>
                                 <li><a href="#ThereAreAllTheGirls">There are all the girls</a></li>
-                                <li class="list-break"><span class="gray-700 inter">•&emsp;•&emsp;•&emsp;•&emsp;•</span></li>
+                                <li class="list-break"><span class="gray-700 inter">•&emsp;•&emsp;•</span></li>
                                 <li class="subitems">
                                     <h3 class="m0">Untitleds</h3>
                                     <ul>
