@@ -43,6 +43,12 @@
                 <p><a href="poems.html"><span class="inter">&larr;</span> Go back to poetry homepage</a></p>
                 <nav class="toc measure" id="PoetryToc">
                     <h3>Young</h3>
+                    <table>
+                        <tr>
+                            <td><span id="poemCount"></span></td>
+                            <td>poems</td>
+                        </tr>
+                    </table>
                     <p>This is a group of poems called “Young.” They’re called that because I wrote almost all of them from 2010-2011, when I was 20 and 21. Some I added in the rest of my early twenties up to 25 or so.</p>
                     <p>Some well known artists (in this case writers) have collections of “juvenilia,” which are compendia of works written by authors in their youth. Usually only writers with the acclaim of an Austen or a Yeats have their early work collected and published. But I didn’t let that stop me from making one. I consider this my own juvenilia.</p>
                     <p>My voice has changed. I have changed. I have done some editing, but these are more or less the poems they were over a decade ago as of this writing. These aren’t the poems I would write today. They aren’t written the way I would write them today. For a long time, I didn&rsquo;t even think I would ever make them public. Whether they’re good or bad isn’t entirely up to me, but there are some I’m proud of and others…well, let’s say I cringed reading more than a few of these.</p>
@@ -225,7 +231,7 @@
                     <h5>Night Winds, Part &#8545;</h5>
                     <blockquote class="allusion">
                         <p>
-                        But as soon as Cupid saw her, he was smitten with her, and he kissed her, and he brought to naught all the commandment of his mother.</p>
+                            But as soon as Cupid saw her, he was smitten with her, and he kissed her, and he brought to naught all the commandment of his mother.</p>
                         <ul class="citation">
                             <li><cite>Apuleius, </cite></li>
                             <li><em>The Golden Ass</em></li>
@@ -4374,6 +4380,7 @@
     <script src="../js/main.js"></script>
     <script type="text/javascript">
     displayCurrentYear();
+    countPoems();
     </script>
 </body>
 
