@@ -23,3 +23,7 @@
 06:49:19
 
 Added an allusion to the golden ass for eros and psyche and did corresponding CSS edits to get the rendering where I want it to be
+
+06:55:33
+
+Added in some poem count metrics for Young
